--- a/c-compiler-webpage/index.html
+++ b/c-compiler-webpage/index.html
@@ -3,72 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C Program Repository & Compiler</title>
-    <!-- Tailwind CSS -->
+    <title>C Program Repository</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Ace Editor -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body class="bg-gray-50">
-    <!-- Navbar -->
-    <nav class="bg-gradient-to-r from-blue-600 to-blue-700 text-white shadow-lg">
-        <div class="container mx-auto px-6 py-4">
-            <div class="flex items-center justify-between">
-                <div class="flex items-center">
-                    <i class="fas fa-code text-2xl mr-3"></i>
-                    <h1 class="text-2xl font-semibold">C Program Repository</h1>
-                </div>
-                <button id="newProgramBtn" class="bg-white text-blue-600 px-4 py-2 rounded-lg hover:bg-blue-50 transition-colors duration-200 flex items-center">
-                    <i class="fas fa-plus mr-2"></i>
-                    New Program
-                </button>
-            </div>
+<body class="bg-gray-100">
+    <!-- Header -->
+    <header class="bg-blue-600 text-white p-4">
+        <div class="container mx-auto flex justify-between items-center">
+            <h1 class="text-2xl font-bold flex items-center">
+                <i class="fas fa-code mr-2"></i>
+                C Program Repository
+            </h1>
+            <button id="newProgramBtn" class="bg-white text-blue-600 px-4 py-2 rounded-lg hover:bg-blue-50 transition-colors duration-200 flex items-center">
+                <i class="fas fa-plus mr-2"></i>
+                New Program
+            </button>
         </div>
-    </nav>
+    </header>
 
     <!-- Main Content -->
-    <main class="container mx-auto px-6 py-8">
-        <!-- Programs Grid -->
-        <div id="programsContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <!-- Program cards will be dynamically added here -->
+    <main class="container mx-auto p-4">
+        <div id="programsContainer" class="grid grid-cols-1 gap-4">
+            <!-- Programs will be dynamically added here -->
         </div>
     </main>
 
     <!-- New Program Modal -->
     <div id="programModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center">
-        <div class="bg-white rounded-lg w-full max-w-4xl mx-4">
-            <div class="p-6">
-                <div class="flex justify-between items-center mb-6">
-                    <h2 class="text-2xl font-semibold">Add New Program</h2>
-                    <button id="closeModal" class="text-gray-500 hover:text-gray-700">
-                        <i class="fas fa-times text-xl"></i>
-                    </button>
+        <div class="bg-white rounded-lg p-6 w-full max-w-3xl">
+            <div class="flex justify-between items-center mb-4">
+                <h2 class="text-2xl font-bold">Add New Program</h2>
+                <button id="closeModal" class="text-gray-500 hover:text-gray-700">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="space-y-4">
+                <div>
+                    <label for="programTitle" class="block text-sm font-medium text-gray-700">Program Title</label>
+                    <input type="text" id="programTitle" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
                 </div>
-                <div class="space-y-4">
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Program Title</label>
-                        <input type="text" id="programTitle" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-                    </div>
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Program Description</label>
-                        <textarea id="programDescription" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" rows="2"></textarea>
-                    </div>
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Code</label>
-                        <div id="editor" class="h-64 border border-gray-300 rounded-lg"></div>
-                    </div>
+                <div>
+                    <label for="programDescription" class="block text-sm font-medium text-gray-700">Program Description</label>
+                    <textarea id="programDescription" rows="3" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500"></textarea>
                 </div>
-                <div class="mt-6 flex justify-end space-x-3">
-                    <button id="cancelBtn" class="px-4 py-2 text-gray-600 hover:text-gray-800">
-                        Cancel
-                    </button>
-                    <button id="saveProgram" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition-colors duration-200">
-                        Save Program
-                    </button>
+                <div>
+                    <label for="editor" class="block text-sm font-medium text-gray-700">Code</label>
+                    <div id="editor" class="mt-1 h-64 border border-gray-300 rounded-md"></div>
+                </div>
+                <div class="flex justify-end space-x-3">
+                    <button id="cancelBtn" class="px-4 py-2 border border-gray-300 rounded-md text-gray-700 hover:bg-gray-50">Cancel</button>
+                    <button id="saveProgram" class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700">Save Program</button>
                 </div>
             </div>
         </div>
@@ -76,26 +62,23 @@
 
     <!-- Compilation Modal -->
     <div id="compilationModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center">
-        <div class="bg-white rounded-lg w-full max-w-2xl mx-4">
-            <div class="p-6">
-                <div class="flex justify-between items-center mb-6">
-                    <h2 class="text-2xl font-semibold">Compilation Result</h2>
-                    <button class="closeCompilationModal text-gray-500 hover:text-gray-700">
-                        <i class="fas fa-times text-xl"></i>
-                    </button>
-                </div>
-                <div id="compilationOutput" class="bg-gray-100 p-4 rounded-lg font-mono text-sm max-h-96 overflow-auto">
-                    <!-- Compilation output will be displayed here -->
-                </div>
-                <div class="mt-6 flex justify-end">
-                    <button class="closeCompilationModal bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition-colors duration-200">
-                        Close
-                    </button>
-                </div>
+        <div class="bg-white rounded-lg p-6 w-full max-w-3xl">
+            <div class="flex justify-between items-center mb-4">
+                <h2 class="text-2xl font-bold">Compilation Result</h2>
+                <button class="closeCompilationModal text-gray-500 hover:text-gray-700">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div id="compilationOutput" class="bg-gray-100 p-4 rounded-lg font-mono text-sm max-h-96 overflow-auto">
+                <!-- Compilation output will be displayed here -->
+            </div>
+            <div class="flex justify-end mt-4">
+                <button class="closeCompilationModal px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700">Close</button>
             </div>
         </div>
     </div>
 
+    <!-- Scripts -->
     <script src="assets/js/c-compiler.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
